# cmake-examples

01-basic/A-hello-cmake/: CMakeLists.txt  README.md
01-basic/B-hello-headers/: CMakeLists.txt  README.md
01-basic/C-static-library/: CMakeLists.txt  README.md
01-basic/D-shared-library/: CMakeLists.txt  README.md
01-basic/E-installing/: CMakeLists.txt  README.md
01-basic/F-build-type/: CMakeLists.txt  README.md
01-basic/G-complie-flags/: CMakeLists.txt  README.md
01-basic/H-third-party-library/: CMakeLists.txt  README.md
01-basic/I-compiling-with-clang/: README.md  pre_test.sh  run_test.sh
01-basic/K-imported-targets/: CMakeLists.txt  README.md
02-sub-projects/: CMakeLists.txt  README.md
02-sub-projects/sublibrary/: main.cpp
02-sub-projects/sublibrary1/: CMakeLists.txt
03-code-generation/configure-files/: CMakeLists.txt  README.md  path.h.in
03-code-generation/protobuf/: CMakeLists.txt
L-cpp-standard/i-common-method/: CMakeLists.txt  README.MD
L-cpp-standard/ii-cxx-standard/: CMakeLists.txt  README.md
L-cpp-standard/iii-compiler-features/: CMakeLists.txt  README.md
